# christopher-clean-code

./: .gitignore  BUILD_ON_RPI5.md  CHANGELOG.md  CHRISTOPHER_UPDATE.md  CMakeLists.txt  COMPLETION_CHECKLIST.md  CRITICAL_FINDINGS.md  CRITICAL_FIXES_APPLIED.md  DATASHEET_PROOF.md  MASTER_VERIFICATION_PLAN.md  README.md  READY_TO_SEND.md  REVIEW_CHECKLIST.md  STATUS_FOR_CHRISTOPHER.md  TESTING_WITHOUT_HARDWARE.md  URGENT_FIX_COMPLETE.md  VERIFICATION_STATUS.md  chat-history-mom.txt  test_compile.sh
.github/workflows/: ci.yml
config/: sdk_config.h
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  Doxyfile  TESTING.md
examples/: haptics_demo.c
include/: da7281.h  da7281_config.h  da7281_registers.h
scripts/: pre-commit-check.ps1
src/: da7281.c  da7281_i2c.c
tests/: Makefile  test_without_hardware.c
tests/unit/: test_da7281_config.c  test_da7281_init.c
